k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teleton-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: teleton-web
  template:
    metadata:
      labels:
        app: teleton-web
    spec:
      containers:
        - name: teleton-web
          image: ghcr.io/romanshkvolkov/teleton-web:latest
          ports:
            - containerPort: 3000
