k8s/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: teleton-route
  namespace: default
spec:
  parentRefs:
    - name: gateway-api
      namespace: default

  hostnames:
    - "teleton.dwitsites.com"

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: teleton-web
          port: 80
